--- a/templates/planner.html
+++ b/templates/planner.html
@@ -28,8 +28,15 @@
             font-family: Forum;
             font-size: 90px;
         }
+        table {
+            width: auto;
+            border: 1px solid black;
+        }
+        .task {
+                height:400px;
+            border: 1px solid black;
 
-
+        }
     </style>
     <title>Nighthawk Coding | Planner</title>
 </head>
@@ -45,9 +52,9 @@
 
 
     <!-- TABLE TIME -->
-    <div class="container"  style="width: 100%">
+<!--    <div class="container">-->
         <div class="row justify-content-md-center">
-            <div class="col-7">
+<!--            <div class="col-7">-->
                 <table class="table">
                     <tr id="day">
                         <th>Sunday</th>
@@ -58,7 +65,7 @@
                         <th>Friday</th>
                         <th>Saturday</th>
                     </tr>
-                    <tr id="task">
+                    <tr class ="task" id="task">
                         <td>task</td>
                         <td>task</td>
                         <td>task</td>
@@ -66,6 +73,15 @@
                         <td>task</td>
                         <td>task</td>
                         <td>task</td>
+                    </tr>
+                    <tr id="complete">
+                        <td>smth</td>
+                        <td>smth</td>
+                        <td>smth</td>
+                        <td>smth</td>
+                        <td>smth</td>
+                        <td>smth</td>
+                        <td>smth</td>
                     </tr>
                 </table>
             </div>
